// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses summary page correctly 1`] = `
<p>
  Viewing 
  25
   
  expenses
   totalling 
  $25.00
</p>
`;

exports[`should render correctly one expense on Expenses summary page 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $2.50
</p>
`;
